Totally broken in-between state.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,6 +10,9 @@ vcpkg_cmake_package(zlib TRIPLET foo COMMIT 6a220edfb8454a4fc1652f82f537518ac620
 #vcpkg_cmake_package(zlib COMMIT 97a2b5a793c439a8961f1c51dca4117d1cbd1cc2) # zlib 1.2.11
 vcpkg_cmake_end()
 
+# For now.
+return()
+
 project(test CXX)
 
 find_package(ZLIB REQUIRED)
